<resources>
    <string name="app_name">Receitas+</string>

    <!--    Tela Principal-->
    <string name="main_usuario">Usuário</string>
    <string name="main_usuario_hint">Digite seu Login</string>
    <string name="main_senha">Senha</string>
    <string name="main_senha_hint">Digite sua Senha</string>
    <string name="main_loginButton">Login</string>
    <string name="main_cadastroButton">Cadastro</string>
    <!--   Dashboard -->
    <string name="dashboard_buscarNome">Buscar receitas por nome</string>
    <string name="dashboard_buscarLista">Buscar receitas por ingredientes</string>
    <string name="dashboard_textoUsuario">Bem Vindo!</string>
    <string name="dashboard_btnVoltar">Voltar</string>
    <string name="dashboard_btnEditarUsuarios">Painel Administrativo</string>
    <string name="dashboard_btnFavoritos">Receitas Favoritas</string>
    <!--    Tela Cadastro -->
    <string name="cadastro_textoTitulo">Criação de Usuário</string>
    <string name="cadastro_textoUsuario">Usuário</string>
    <string name="cadastro_textoSenha">Senha</string>
    <string name="cadastro_textoSenhaConfirmar">Repetir Senha</string>
    <string name="cadastro_btnCadastrar">Cadastrar</string>
    <string name="cadastro_btnVoltar">Voltar</string>
    <string name="title_activity_listar_usuarios">ListarUsuarios</string>
    <!--    Lista Usuarios -->
    <string name="listaUsuarios_btnVoltar">Voltar</string>
    <string name="listaUsuarios_tvTitulo">Usuários</string>
    <!--    Lista Receitas -->
    <string name="listaReceitas_btnVoltar">Voltar</string>
    <string name="listaReceitas_etPesquisarHint">Digite aqui para pesquisar</string>
    <string name="listaReceitas_btnPesquisar">Pesquisar</string>
    <string name="listaReceitas_tvTitulo">Receitas</string>
    <!--    Tela Atualizar Usuario-->
    <string name="atualizarUsuario_tvTitulo">Atualizar Usuário</string>
    <string name="atualizarUsuario_btnVoltar">Voltar</string>
    <string name="atualizarUsuario_btnAtualizar">Atualizar</string>
    <string name="atualizarUsuario_tvLogin">Usuário</string>
    <string name="atualizarUsuario_tvSenha">Senha</string>
    <string name="atualizarUsuario_tvSenhaConfirmar">Repetir Senha</string>
    <string name="atualizarUsuario_tvRadio">Tipo de Usuário</string>
    <string name="atualizarUsuario_radioAdmin">Admin</string>
    <string name="atualizarUsuario_radioUsuario">Usuário</string>
    <!--    Lista Ingredientes-->
    <string name="listaIngredientesBtnVoltar">Voltar</string>
    <string name="listaIngredientesBtnAdicionar">Adicionar Ingrediente</string>
    <string name="listaIngredientesBtnPesquisar">Pesquisar</string>
    <string name="listaIngredientesTvTitulo">Lista de Ingredientes</string>
    <string name="listaIngredientesTvErro">ERRO</string>
    <!--    Lista Todos Ingredientes -->
    <string name="listarTodosIngredientesBtnPesquisar">Pesquisar</string>
    <string name="listarTodosIngredientesBtnVoltar">Voltar</string>
    <string name="listarTodosIngredientesPesquisarHint">Digite aqui para pesquisar</string>
    <!--    Tela Receita-->
    <string name="ReceitaEtIngredientes">Ingredientes</string>
    <string name="ReceitaBtnVoltar">Voltar</string>
    <string name="ReceitaCheckBoxFavorito">Favoritar</string>
    <string name="ReceitaBtnComentarios">Comentários</string>
    <string name="receitaBtnModoPreparo">Modo de Preparo</string>
    <!--    Tela Comentarios-->
    <string name="ComentarioEtTitulo">Comentários</string>
    <string name="ComentarioBtnVoltar">Voltar</string>
    <string name="ComentarioBtnEnviar">Enviar</string>
    <string name="comentarioTvComentario">Comentário</string>
    <string name="comentarioHintComentario">Escreva aqui seu comentário!</string>
    <!--    Resultado Pesquisa -->
    <string name="resultadoPesquisaTvTitulo">Resultado</string>
    <string name="resultadoPesquisaBtnVoltar">Voltar</string>
    <!--    Lista Favoritos-->
    <string name="listaFavoritoBtnVoltar">Voltar</string>
    <string name="listaFavoritoTvTitulo">Favoritos</string>
    <!--    Painel Admin-->
    <string name="painelAdminTvTitulo">Painel Administrativo</string>
    <string name="painelAdminBtnVoltar">Voltar</string>
    <string name="painelAdminBtnEditarUsuarios">Editar Usuários</string>
<!--    Modo Preparo-->
    <string name="modoPreparoTitulo">Modo de Preparo</string>
    <string name="modoPreparoBtnVoltar">Voltar</string>
</resources>
