<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ListarIngredientesTodos">

    <EditText
        android:id="@+id/listarTodosIngredientesEtPesquisa"
        android:layout_width="243dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/listarTodosIngredientesPesquisarHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/listarTodosIngredientesBtnPesquisar"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/listarTodosIngredientesBtnPesquisar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/listarTodosIngredientesBtnPesquisar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/listarTodosIngredientesBtnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/listarTodosIngredientesBtnVoltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listarTodosIngredientesLista"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/listarTodosIngredientesBtnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listarTodosIngredientesEtPesquisa" />

</androidx.constraintlayout.widget.ConstraintLayout>